--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "concurrently": "^7.0.0",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "json-server":"json-server --watch src/FunctionalComps/DB/prodDetails.json --host 127.0.0.1 --port 4001",
+    "dev":"concurrently \"npm start\" \"npm run json-server\" ",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
